frontend/src/components/Spots/SpotsDisplayAll/SpotsDisplayAll.css
.grid-container {
  display: flex;
  justify-content: center;
}

.div-spotsGallery {
  display: grid;
  width: 90vw;
  grid-template-columns: 1fr 1fr 1fr .7fr; 
  column-gap: 15px;
  
}


.div-SDA-grid {
  display: flex;
  justify-content: center;
}

.SDA-box {
  display: grid;
  grid-template-areas: 
    'spotImage'
    'information';
  width: 300px;
  grid-template-rows: 245px 60px;
  row-gap: 5px;
  margin: 5px
}

.SDA-Image {
  grid-area: 'spotImage';
  height: auto;
  border-radius: 15px;
  width: 300px;
  height: 245px;
  object-fit: cover; 
  object-position: center; 
}


.div-SDA-info {
  grid-area: 'information';
}

.SDA-Location {
  font-size: 14px;
  font-weight: 600;
}

.SDA-Name {
  font-size: 13px;
}

.SDA-Price {
  padding: 0;
  margin: 0;
  font-size: 14px;
  font-weight: 700;
}

.SDA-info-p{
  margin: 0;
}

.SDA-icon {
  font-size: 12px;
  margin: 5px;
}

.SDA-Rating {
  display: flex;
  align-items: center;
  justify-content: flex-end;
}
 

